--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
-/node_modules
+node_modules/
+bundle.js*
+/public/assets
+# Ignore master key for decrypting credentials and more.
+/config/master.key
