--- a/package.json
+++ b/package.json
@@ -29,5 +29,9 @@
   "devDependencies": {
     "file-loader": "^6.0.0",
     "image-webpack-loader": "^6.0.0"
+  },
+  "engines": {
+    "node": "10.13.0",
+    "npm": "6.4.1"
   }
 }
