--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,7 @@ bundle.js*
 .byebug_history
 .DS_Store
 npm-debug.log
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
